--- a/ui/11-20/15-Flower-cursor/style.css
+++ b/ui/11-20/15-Flower-cursor/style.css
@@ -5,6 +5,20 @@
   src: url("../../fonts/NewYork-PERSONAL-USE.woff2") format("woff2"), url("../../fonts/NewYork-PERSONAL-USE.woff") format("woff");
 }
 
+@font-face {
+  font-family: "Letters-for-Learners";
+  font-style: "woff";
+  font-weight: 700;
+  src: url("../../fonts/Letters-for-Learners.woff2") format("woff2"), url("../../fonts/Letters-for-Learners.woff") format("woff");
+}
+
+@font-face {
+  font-family: "allright";
+  font-style: "woff";
+  font-weight: 700;
+  src: url("../../fonts/allright.woff2") format("woff2"), url("../../fonts/allright.woff") format("woff");
+}
+
 * {
   margin: 0;
   padding: 0;
