--- a/ui/11-20/19-Water/style.scss
+++ b/ui/11-20/19-Water/style.scss
@@ -1,5 +1,5 @@
 @import '../../utils/fonts';
-@include font-face("allright", "../../fonts/allright", 700, "woff");
+@import '../../utils/font';
 
 $wh: 600px;
 
