--- a/ui/11-20/14-Diagonal/style.scss
+++ b/ui/11-20/14-Diagonal/style.scss
@@ -1,6 +1,5 @@
 @import '../../utils/fonts';
-
-@include font-face("NewYorkFont", "../../fonts/NewYork-PERSONAL-USE", 700, "woff");
+@import '../../utils/font';
 
 $bg-grey: #eee;
 $bg-black: #000;
