--- a/ui/11-20/17-Cosmetics/style.scss
+++ b/ui/11-20/17-Cosmetics/style.scss
@@ -1,5 +1,5 @@
 @import '../../utils/fonts';
-@include font-face("NewYorkFont", "../../fonts/NewYork-PERSONAL-USE", 700, "woff");
+@import '../../utils/font';
 
 * {margin: 0; padding: 0;}
 
