--- a/ui/11-20/19-Water/style.css
+++ b/ui/11-20/19-Water/style.css
@@ -1,4 +1,18 @@
 @font-face {
+  font-family: "NewYorkFont";
+  font-style: "woff";
+  font-weight: 700;
+  src: url("../../fonts/NewYork-PERSONAL-USE.woff2") format("woff2"), url("../../fonts/NewYork-PERSONAL-USE.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Letters-for-Learners";
+  font-style: "woff";
+  font-weight: 700;
+  src: url("../../fonts/Letters-for-Learners.woff2") format("woff2"), url("../../fonts/Letters-for-Learners.woff") format("woff");
+}
+
+@font-face {
   font-family: "allright";
   font-style: "woff";
   font-weight: 700;
